# flask-restapi

./: .env  README.md  pyproject.toml  requirements.txt  run.py
app/: run.py
app/posts/: __init__.py  controller.py  models.py  routs.py
app/utils/: __init__.py
app/weather/: __init__.py  controller.py  routs.py
docs/: README.md  rest_api_definition.har  rest_api_definition.insomnia.json
posts/: __init__.py  controller.py  models.py  routs.py
utils/: __init__.py
weather/: __init__.py  controller.py  models.py  routs.py
